--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -6,28 +6,24 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  mirror:
+  debian:
     runs-on: ubuntu-latest
     steps:
-      - name: Download images
+      - uses: actions/checkout@v2
+      - name: Log in to Quay
+        run:  echo "${{ secrets.DOCKER_PASSWORD }}" | docker login quay.io -u  ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Pull
         run: |
-          export DEB='latest \
-                10 \
-                10.7 \
-                buster \
-                  \
-                10-slim \
-                10.7-slim \
-                buster-slim"
-          for tag in $DEB; do
-            docker pull debian:$tag && \
-            docker tag debian:$tag quay.io/rblaine95/debian:$tag
+          for tag in $(cat ./images/debian); do
+            docker pull debian:$tag
           done
-      - name: Publish Debian
-        uses: jerray/publish-docker-action@master
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          registry: quay.io
-          repository: rblaine95/debian
-          tags: latest,10,10.7,buster,10-slim,10.7-slim,buster-slim
+      - name: Tag
+        run: |
+          for tag in $(cat ./images/debian); do
+              docker tag debian:$tag quay.io/rblaine95/debian:$tag
+            done
+      - name: Push
+        run: |
+          for tag in $(cat ./images/debian); do
+              docker push quay.io/rblaine95/debian:$tag
+            done
