--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,54 +1,57 @@
-name: Mirror Dockerhub to Quay
+name: Mirror Dockerhub to Github
 
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
+env:
+  PLATFORMS: linux/arm/v7,linux/arm64/v8,linux/amd64
+
 jobs:
   debian:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Log in to Quay
-        run:  echo "${{ secrets.DOCKER_PASSWORD }}" | docker login quay.io -u  ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Pull
+      - name: Login to Github
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Install Buildx
+        uses: docker/setup-buildx-action@v1.0.4
+      - name: Build
         run: |
           for tag in $(cat ./images/debian); do
-            docker pull debian:$tag
+            docker buildx build \
+              --platform $PLATFORMS \
+              --build-arg IMAGE=debian \
+              --build-arg VERSION=$tag \
+              --tag ghcr.io/${{ github.repository }}/debian:$tag \
+              --push \
+              .
           done
-      - name: Tag
-        run: |
-          for tag in $(cat ./images/debian); do
-              docker tag debian:$tag quay.io/rblaine95/debian:$tag
-            done
-      - name: Push
-        run: |
-          for tag in $(cat ./images/debian); do
-              docker push quay.io/rblaine95/debian:$tag
-            done
   alpine:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Log in to Quay
-        run:  echo "${{ secrets.DOCKER_PASSWORD }}" | docker login quay.io -u  ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: Download dockertag.sh
+      - name: Login to Github
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Install Buildx
+        uses: docker/setup-buildx-action@v1.0.4
+      - name: Build
         run: |
-          wget https://git.io/JL72G -O dockertag.sh
-          bash dockertag.sh alpine > images/alpine
-      - name: Pull
-        run: |
-          for tag in $(cat images/alpine); do
-            docker pull alpine:$tag
-          done
-      - name: Tag
-        run: |
-          for tag in $(cat images/alpine); do
-            docker tag alpine:$tag quay.io/rblaine95/alpine:$tag
-          done
-      - name: Push
-        run: |
-          for tag in $(cat images/alpine); do
-            docker push quay.io/rblaine95/alpine:$tag
+          for tag in $(cat ./images/alpine); do
+            docker buildx build \
+              --platform $PLATFORMS \
+              --build-arg IMAGE=alpine \
+              --build-arg VERSION=$tag \
+              --tag ghcr.io/${{ github.repository }}/alpine:$tag \
+              --push \
+              .
           done
