--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -19,6 +19,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.1.0
       - name: Build
@@ -43,6 +45,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.1.0
       - name: Build
@@ -67,6 +71,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.1.0
       - name: Build
