--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -87,3 +87,27 @@ jobs:
               --push \
               .
           done
+  golang:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Github
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Install Buildx
+        uses: docker/setup-buildx-action@v1.0.4
+      - name: Build
+        run: |
+          for tag in $(cat ./images/golang); do
+            docker buildx build \
+              --platform $PLATFORMS \
+              --build-arg IMAGE=golang \
+              --build-arg VERSION=$tag \
+              --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
+              --tag ghcr.io/${{ github.repository_owner }}/golang:$tag \
+              --push \
+              .
+          done
