--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -29,7 +29,7 @@ jobs:
             docker buildx build \
               --platform $PLATFORMS \
               --build-arg IMAGE=debian \
-              --build-arg VERSION=$tag \
+              --build-arg TAG=$tag \
               --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
               --tag ghcr.io/${{ github.repository_owner }}/debian:$tag \
               --push \
@@ -55,7 +55,7 @@ jobs:
             docker buildx build \
               --platform $PLATFORMS \
               --build-arg IMAGE=alpine \
-              --build-arg VERSION=$tag \
+              --build-arg TAG=$tag \
               --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
               --tag ghcr.io/${{ github.repository_owner }}/alpine:$tag \
               --push \
@@ -81,7 +81,7 @@ jobs:
             docker buildx build \
               --platform $PLATFORMS \
               --build-arg IMAGE=busybox \
-              --build-arg VERSION=$tag \
+              --build-arg TAG=$tag \
               --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
               --tag ghcr.io/${{ github.repository_owner }}/busybox:$tag \
               --push \
@@ -105,7 +105,7 @@ jobs:
             docker buildx build \
               --platform $PLATFORMS \
               --build-arg IMAGE=golang \
-              --build-arg VERSION=$tag \
+              --build-arg TAG=$tag \
               --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
               --tag ghcr.io/${{ github.repository_owner }}/golang:$tag \
               --push \
