--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -239,6 +239,30 @@ jobs:
               --push \
               .
           done
+  python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Login to Github
+        uses: docker/login-action@v1.9.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Install Buildx
+        uses: docker/setup-buildx-action@v1.3.0
+      - name: Build
+        run: |
+          for tag in $(cat ./images/python); do
+            docker buildx build \
+              --platform $PLATFORMS \
+              --build-arg IMAGE=python \
+              --build-arg TAG=$tag \
+              --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
+              --tag ghcr.io/${{ github.repository_owner }}/python:$tag \
+              --push \
+              .
+          done
   rust:
     runs-on: ubuntu-latest
     steps:
