--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -97,6 +97,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -121,6 +123,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.1.2
       - name: Build
@@ -147,6 +151,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -173,6 +179,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -199,6 +207,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -225,6 +235,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -249,6 +261,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
@@ -273,6 +287,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.3.0
       - name: Build
