--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -47,17 +47,14 @@ jobs:
             platforms: linux/amd64,linux/arm64/v8
     steps:
       - uses: actions/checkout@v3
-      - name: Login to Github
-        uses: docker/login-action@v1
+      - uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Install Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Build
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - name: Mirror
         run: |
           for tag in $(cat ./images/${{ matrix.image }}); do
             docker buildx build \
