--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -14,37 +14,26 @@ jobs:
         include:
           - image: alpine
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: busybox
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: debian
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: golang
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: kubectl
             repo: docker.io/bitnami
-            platforms: linux/amd64
           - image: mysql
             repo: docker.io
-            platforms: linux/amd64
           - image: node
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           - image: openjdk
             repo: docker.io
-            platforms: linux/amd64
           - image: postgres
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: python
             repo: docker.io
-            platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           - image: rust
             repo: docker.io
-            platforms: linux/amd64,linux/arm64/v8
     steps:
       - uses: actions/checkout@v3
       - uses: docker/login-action@v2
@@ -52,18 +41,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - uses: docker/setup-qemu-action@v2
-      - uses: docker/setup-buildx-action@v2
+      - uses: actions/setup-go@v2
+      - uses: imjasonh/setup-crane@v0.1
       - name: Mirror
         run: |
           for tag in $(cat ./images/${{ matrix.image }}); do
-            docker buildx build \
-              --platform ${{ matrix.platforms }} \
-              --build-arg REPO=${{ matrix.repo }} \
-              --build-arg IMAGE=${{ matrix.image }} \
-              --build-arg TAG=$tag \
-              --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
-              --tag ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}:$tag \
-              --push \
-              .
+            crane copy \
+              ${{ matrix.repo }}/${{ matrix.image }}:$tag \
+              ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}:$tag
           done
