`zenlab/kubectl` instead of `bitnami/kubectl`

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -21,7 +21,7 @@ jobs:
           - image: golang
             repo: docker.io
           - image: kubectl
-            repo: docker.io/bitnami
+            repo: quay.io/zenlab
           - image: mysql
             repo: docker.io
           - image: node
