--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -38,6 +38,8 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
