Reorganize image files by repository structure
Restructure the `images/` directory to organize files by repository
name (e.g., `docker.io/alpine` instead of just `alpine`). This change
provides better organization and clarity about which registry each
image belongs to.

Update the GitHub Actions workflow to use the new directory structure
by incorporating `${{ matrix.repo }}` in the file path when reading
tag lists.

* Move all image tag files into `images/docker.io/` subdirectory
* Update workflow to reference `./images/${{ matrix.repo }}/${{ matrix.image }}`
  instead of `./images/${{ matrix.image }}`

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: imjasonh/setup-crane@v0.4
       - name: Mirror
         run: |
-          for tag in $(cat ./images/${{ matrix.image }}); do
+          for tag in $(cat ./images/${{ matrix.repo }}/${{ matrix.image }}); do
             crane copy \
               ${{ matrix.repo }}/${{ matrix.image }}:$tag \
               ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}:$tag
